libs/config/tests/errors/ce3_duplicate_property_separate/source.hpp
class Test {
    class Child {
        inner = "something";
    };
    class Child {
        inner = "something";
    };
};
